# taticoma-rev-2

./: .clang-format  99-usb-serial.rules  Notes.md  README.md  clang-format.sh  notes
ARDUINO/joy/: filter_sred.h  joy.ino
ARDUINO/libs/USB_Host_Shield_2.0-master/: BTD.cpp  BTD.h  BTHID.cpp  BTHID.h  PS3BT.cpp  PS3BT.h  PS3Enums.h  PS3USB.cpp  PS3USB.h  PS4BT.h  PS4Parser.cpp  PS4Parser.h  PS4USB.h  PSBuzz.cpp  PSBuzz.h  SPP.cpp  SPP.h  UHS2_gpio.cpp  UHS2_gpio.h  Usb.cpp  Usb.h  UsbCore.h  Wii.cpp  Wii.h  XBOXOLD.cpp  XBOXOLD.h  XBOXONE.cpp  XBOXONE.h  XBOXRECV.cpp  XBOXRECV.h  XBOXUSB.cpp  XBOXUSB.h  address.h  adk.cpp  adk.h  avrpins.h  cdc_XR21B1411.cpp  cdc_XR21B1411.h  cdcacm.cpp  cdcacm.h  (+39 more)
ARDUINO/nextion/: joy.HMI
ARDUINO/nextion/fonts/: roboto-light.zi  roboto.zi
ARDUINO/utility/SysMC_BootLoader_207/SysMC_Bootloader_1.5.18.1031.001 TxPower21/: dumbl.exe.config
CAD/joy/: joy.SLDASM
CAD/joy/import/due/: due.SLDASM
CAD/joy/import/nextion/: nextion.SLDASM  nextion.iges  nextion.m3d  nextion.rpt  nextion1.sldprt  nextion2.sldprt  nextion3.sldprt  nextion4.sldprt  nextion5.sldprt  ~$extion.m3~
CAD/joy/import/pi-shield/: raspberryPi3BSimplified_STEP.SLDPRT  raspberryPi3BSimplified_STEP.STEP
CAD/joy/import/tft/: tft.SLDPRT
CAD/joy/parts/: base.SLDPRT
CAD/joy/parts/plate/: plate_1-1.m3d  plate_1-1.m3d.bak  plate_1.SLDPRT  plate_1.m3d  plate_1.m3d.bak  plate_1.m3d.bak.bak  plate_1.x_b  plate_1.x_t  plate_11.SLDPRT  ~$late_1.m3~
CAD/joy/parts/switch-plate/: switch-plate.m3d
CAD/taticoma-cad/: taticoma_.frw  taticoma_.frw.bak  ~$ticoma.Id_3228696580.fr~  ~$ticoma_.fr~
CAD/taticoma-cad/3d-1/: assm.SLDASM  assm.x_b  body.SLDASM
CAD/taticoma-cad/3d-1/ax-12a/: PRT0001.sldprt  PRT0002.sldprt  PRT0003.sldprt  PRT0003_1.sldprt  PRT0003_2.sldprt  PRT0003_3.sldprt  PRT0004.sldprt  PRT0004_1.sldprt  PRT0005.sldprt  PRT0006.sldprt  PRT0007.sldprt  ax-12a.SLDASM
CAD/taticoma-cad/3d-1/parts/: cap.SLDPRT  coha.SLDASM  f1.SLDPRT  f1.x_b  f2.SLDPRT  f2.x_b  f3.SLDPRT  f4.SLDPRT  f4.x_b  femur.SLDASM  leg.SLDASM  p5.SLDPRT  p5.x_b  p6.SLDPRT  p6.x_b  tibia.SLDASM  top-plate.SLDPRT
CAD/taticoma-cad/3d-1/screws/: DIN912_m2x10.par  ISO 4762_М2x10.par  ISO 4762_М2x10.sldprt  ISO_4032_M2.par  ISO_4032_M2.sldprt  ISO_4032_M3.par  ISO_4032_M3.sldprt  ISO_4762_М2x6.par  ISO_4762_М2x6.sldprt  ISO_4762_М2x8.par  ISO_4762_М2x8.sldprt  ISO_4762_М2x8_mir.par  ISO_4762_М3x10.par  ISO_4762_М3x10.sldprt  ISO_4762_М5x16.par  ISO_4762_М5x16.sldprt  ISO_4762_М5x20.par  ISO_4762_М5x20.sldprt  m3-hex.par
CAD/taticoma-cad/CUT-BEND/: body-cut-x3.dwg  body-cut-x3.frw  cut-power-panels.dxf  cut-power-panels.frw  cut_trans_panels.dxf  cut_trans_panels.frw  f1-bend.cdw.bak  f1-cut-x8.dwg  f1-cut-x8.frw  f1-cut-x8.frw.bak  f2-cut-x8.dwg  f2-cut-x8.frw  f2-cut-x8.frw.bak  f3-bend.cdw.bak  f3-cut-x14.dwg  f3-cut-x14.frw  f3-cut-x14.frw.bak  f4-cut-x14.dwg  f4-cut-x14.frw  ~$t-power-panels.fr~  ~$t_trans_panels.fr~
CAD/taticoma-cad/CUT-BEND/Drawings/: f1-bend.cdw  f1-bend.cdw.bak  f2-bend.cdw  f2-bend.cdw.bak  f3-bend.cdw  f3-bend.cdw.bak
CAD/taticoma-cad/CUT-BEND/compas-bend-parts/: f1.m3d  f1.x_b  f2.x_b  f3.m3d  f3.x_b
CAD/taticoma-cad/CUT-BEND/dwg/: body-cut-x3.frw  f4-cut-x14.dwg
CAD/taticoma-cad/CUT-BEND/modules/: battery-plate v2.f3d  battery-plate.SLDPRT  battery-plate.STEP  battery_plate.dwg  battery_plate.frw  battery_plate.frw.bak  battery_plate.x_b  power-plate v2.f3d  power-plate.SLDPRT  power-plate.STEP  power_plate.dwg  power_plate.frw  power_plate.frw.bak  rpi-plate v1.f3d  rpi-plate.SLDPRT  rpi-plate.STEP  rpi_plate.dwg  rpi_plate.frw  rpi_plate.frw.bak  storm-plate v1.f3d  storm-plate.SLDPRT  storm-plate.STEP  storm_plate.dwg  storm_plate.frw  teleop-plate.SLDPRT  teleop-plate.STEP  teleop_plate.dwg  teleop_plate.frw  ~$i_plate.fr~  ~$rpi-plate.SLDPRT  ~$wer_plate.fr~
CAD/taticoma-cad/CUT-BEND/send/: 3d.rar
CAD/taticoma-cad/CUT-BEND/send2/: body-cut-x3.dwg  f1.stp  f2.m3d  f2.m3d.bak  f3.m3d.bak  order.rar  ~$f1.m3~  ~$f2.m3~  ~$f3.m3~  спецификация.xlsx
CAD/taticoma-cad/parts-draw/: f1.cdw  f1.dwg  f1.frw  f1.m3d.bak  f2.cdw  f2.m3d.bak  f3.m3d.bak  f4.m3d  p5.m3d  p6.m3d  top-plate.dwg  top-plate.frw  ~$p-plate.fr~
CAD/taticoma-cad/stl/: coha.STL  femur.STL
GIMBAL/: settings.cfg
GIMBAL/o323bgc-release-v096-v20160319/: o323BGCTool.ini  o323BGCTool_Run.bat
ROS/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ROS/src/dynamixel_setup/: CMakeLists.txt
ROS/src/taticoma_body_kinematics/: CMakeLists.txt  package.xml
ROS/src/taticoma_body_kinematics/src/: body_kinematics.cpp  body_kinematics.hpp
ROS/src/taticoma_description/: manifest.xml
ROS/src/taticoma_dynamixel_controller/: CMakeLists.txt  package.xml
ROS/src/taticoma_dynamixel_controller/src/: dynamixel_controller.cpp  dynamixel_controller.hpp  taticoma_dynamixel_controller.cpp  taticoma_dynamixel_controller.hpp
ROS/src/taticoma_gait/: CMakeLists.txt
ROS/src/taticoma_gait/src/: gait.cpp  gait.hpp  gait_kinematics.cpp  gait_kinematics.hpp  gait_test.cpp  gait_test.hpp
ROS/src/taticoma_joint_publisher/: CMakeLists.txt  package.xml
ROS/src/taticoma_joint_publisher/src/: taticoma_joint_publisher.cpp
ROS/src/taticoma_leg_kinematics/: CMakeLists.txt  package.xml
ROS/src/taticoma_leg_kinematics/src/: chainiksolvervel_pinv.cpp  chainiksolvervel_pinv.hpp  hp_chainiksolverpos_nr_jl.cpp  hp_chainiksolverpos_nr_jl.hpp  leg_ik_service.cpp  leg_ik_service.hpp  leg_kinematics.cpp  leg_kinematics_pub.cpp  svd_HH.cpp  svd_HH.hpp
ROS/src/taticoma_msgs/: CMakeLists.txt
ROS/src/taticoma_msgs/msg/: BodyCommand.msg  GaitCommand.msg  LegIKRequest.msg  LegsJointsState.msg  TeleopCommand.msg
ROS/src/taticoma_msgs/srv/: GetLegIKSolver.srv
ROS/src/taticoma_storm_controller/: CMakeLists.txt  package.xml
ROS/src/taticoma_storm_controller/src/: checksum.h  taticoma_storm_controller.cpp  taticoma_storm_controller.hpp
ROS/src/taticoma_teleop/: CMakeLists.txt  package.xml
ROS/src/taticoma_teleop/src/: taticoma_teleop.cpp  taticoma_teleop.hpp  taticoma_teleop_serial.cpp  taticoma_teleop_serial.hpp
(+260 files in other folders)
