<?xml version="1.0"?>
<package>
  <name>taticoma_body_kinematics</name>
  <version>0.0.0</version>
  <description>The taticoma_body_kinematics package</description>
  <maintainer email="gabbapeople@mail.ru">gabbapeople</maintainer>
  <license>todo</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>orocos_kdl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>orocos_kdl</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
