<?xml version="1.0"?>
<package>
  <name>taticoma_joint_publisher</name>
  <version>0.0.0</version>
  <description>The taticoma_joint_publisher package</description>
  <maintainer email="gabbapeople@mail.ru">gabbapeople</maintainer>
  <license>todo</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joint_state_publisher</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
