<?xml version="1.0"?>
<package>
  <name>taticoma_teleop</name>
  <version>0.0.0</version>
  <description>The taticoma_teleop package</description>
  <maintainer email="gabbapeople@mail.ru">gabbapeople</maintainer>
  <license>todo</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>taticoma_msgs</build_depend>
  
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>taticoma_msgs</run_depend>

</package>
